Update industries, input length > 3

--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-experience/employee-experience.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-experience/employee-experience.component.html
@@ -11,7 +11,8 @@
                                         <h2>{{project.projectMaster?.accountName}}</h2>
                                         <p>{{project.projectMaster?.projectName}}
                                                 <span
-                                                        *ngIf="project.projectMaster?.account?.industryNavigation.industryName !== 'Missing' && 
+                                                        *ngIf="project.projectMaster?.account?.industryNavigation.industryName !== 'PK Corporate' &&
+                                                                project.projectMaster?.account?.industryNavigation.industryName !== 'Missing' && 
                                                                 project.projectMaster?.account?.industryNavigation.industryName">
                                                         &nbsp; | &nbsp;
                                                         Industry :
