--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-info/employee-info.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/employee-profile/employee-info/employee-info.component.html
@@ -93,13 +93,11 @@
                         </div>
                         <div class="col-10">
                                 <span class="employee-info-key">Manager: </span>
-                                <a *ngIf="employeeInfoDetails.managerEmployeeId"
-                                        href="/profile?id={{employeeInfoDetails.managerEmployeeId}}" target="_blank"
-                                        rel="noopener">
-                                        <span class="btn-view-hyperlink">
-                                                {{employeeInfoDetails.manager}}
-                                        </span>
-                                </a>
+                                <span *ngIf="employeeInfoDetails.managerEmployeeId"
+                                        (click)="goToProfile(employeeInfoDetails.managerEmployeeId)"
+                                        class="btn-view-hyperlink">
+                                        {{employeeInfoDetails.manager}}
+                                </span>
                                 <span
                                         *ngIf="!employeeInfoDetails.managerEmployeeId">{{employeeInfoDetails.manager}}</span>
                         </div>
@@ -138,46 +136,51 @@
                         </div>
                 </div>
         </div>
-        <div class="employee-service-line"
-                *ngIf="employeeInfoDetails.serviceLine && employeeInfoDetails.serviceLine !== 'Missing'">
+        <div class="employee-service-line">
                 <div class="row">
                         <div class="col-1">
                                 <fa-icon class="slider-icon" [icon]="faNewspaper" size="md"></fa-icon>
                         </div>
                         <div class="col-10">
                                 <span class="employee-info-key">Service Line: </span>
-                                {{employeeInfoDetails.serviceLine}}
+                                <span
+                                        *ngIf="employeeInfoDetails.serviceLine && employeeInfoDetails.serviceLine !== 'Missing'">{{employeeInfoDetails.serviceLine}}</span>
                         </div>
                 </div>
         </div>
-        <div class="employee-coe" *ngIf="employeeInfoDetails.coe && employeeInfoDetails.coe !== 'Missing'">
+        <div class="employee-coe">
                 <div class="row">
                         <div class="col-1">
                                 <fa-icon class="slider-icon" [icon]="faNewspaper" size="md"></fa-icon>
                         </div>
                         <div class="col-10">
-                                <span class="employee-info-key">COE: </span> {{employeeInfoDetails.coe}}
+                                <span class="employee-info-key">COE: </span>
+                                <span
+                                        *ngIf="employeeInfoDetails.coe && employeeInfoDetails.coe !== 'Missing'">{{employeeInfoDetails.coe}}</span>
                         </div>
                 </div>
         </div>
-        <div class="employee-coe" *ngIf="employeeInfoDetails.coeCore && employeeInfoDetails.coeCore !== 'Missing'">
+        <div class="employee-coe">
                 <div class="row">
                         <div class="col-1">
                                 <fa-icon class="slider-icon" [icon]="faNewspaper" size="md"></fa-icon>
                         </div>
                         <div class="col-10">
-                                <span class="employee-info-key">COE Core: </span> {{employeeInfoDetails.coeCore}}
+                                <span class="employee-info-key">COE Core: </span>
+                                <span
+                                        *ngIf="employeeInfoDetails.coeCore && employeeInfoDetails.coeCore !== 'Missing'">{{employeeInfoDetails.coeCore}}</span>
                         </div>
                 </div>
         </div>
-        <div class="employee-coe"
-                *ngIf="employeeInfoDetails.discipline && employeeInfoDetails.discipline !== 'Missing'">
+        <div class="employee-coe">
                 <div class="row">
                         <div class="col-1">
                                 <fa-icon class="slider-icon" [icon]="faNewspaper" size="md"></fa-icon>
                         </div>
                         <div class="col-10">
-                                <span class="employee-info-key">Discipline: </span> {{employeeInfoDetails.discipline}}
+                                <span class="employee-info-key">Discipline: </span>
+                                <span
+                                        *ngIf="employeeInfoDetails.discipline && employeeInfoDetails.discipline !== 'Missing'">{{employeeInfoDetails.discipline}}</span>
                         </div>
                 </div>
         </div>
