--- a/PKonnect/PKonnect.UI/ClientApp/src/app/shared/employee/employee-search-card/employee-search-card.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/shared/employee/employee-search-card/employee-search-card.component.html
@@ -98,12 +98,10 @@
     </div>
     <div class="row view-profile">
         <div class="col-md-6 offset-md-3">
-            <a href="/profile?id={{employee.employeeId}}" target="_blank" rel="noopener">
-                <span class="btn-view-more-skills">
-                    <fa-icon class=" slider-icon" [icon]="faChevronDown" size="sm"></fa-icon>
-                    View Profile
-                </span>
-            </a>
+            <span class="btn-view-more-skills" (click)="goToProfile(employee.employeeId)">
+                <fa-icon class=" slider-icon" [icon]="faChevronDown" size="sm"></fa-icon>
+                View Profile
+            </span>
         </div>
     </div>
 </div>
