--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/role-defination/role-defination/role-defination.component.html
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/role-defination/role-defination/role-defination.component.html
@@ -14,15 +14,17 @@
                         </mat-form-field>
                     </div>
                 </div>
-
             </form>
             <div class="mat-elevation-z8">
-                <table mat-table [dataSource]="roleDataSource" matSort>
+                <table mat-table [dataSource]="roleDataSource" multiTemplateDataRows matSort>
                     <ng-container matColumnDef="roleName">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Role Name </th>
-                        <td mat-cell *matCellDef="let element">{{element.roleName ? element.roleName : '-' }}</td>
+                        <td mat-cell *matCellDef="let element">
+                                <span *ngIf="element.roleName !== 'Missing' && element.roleName">
+                                        {{element.roleName ? element.roleName : '-' }}
+                                </span>
+                        </td>
                     </ng-container>
-
                     <ng-container matColumnDef="serviceLine">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Service Line</th>
                         <td mat-cell *matCellDef="let element">
@@ -31,7 +33,6 @@
                             </span>
                         </td>
                     </ng-container>
-
                     <ng-container matColumnDef="coE">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> COE </th>
                         <td mat-cell *matCellDef="let element">
@@ -40,18 +41,34 @@
                             </span>
                         </td>
                     </ng-container>
-
                     <ng-container matColumnDef="discipline">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Discipline </th>
                         <td mat-cell *matCellDef="let element">
                             <span *ngIf="element.discipline !== 'Missing' && element.discipline">
                                 {{element.discipline}}
                             </span>
+                            <fa-icon class="slider-icon" class="right" [icon]="faChevronDown" size="sm" *ngIf="element != expandedElement"></fa-icon>
+                            <fa-icon class="slider-icon" class="right" [icon]="faChevronUp" size="sm" *ngIf="element == expandedElement"></fa-icon>
                         </td>
                     </ng-container>
 
+                    <ng-container matColumnDef="expandedDetail">
+                        <td mat-cell *matCellDef="let element" [attr.colspan]="displayedRoleColumns.length">
+                            <div class="example-element-detail"
+                                [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+                                <div class="example-element-description">
+                                    <b>Description:</b> {{element.roleDescription}}
+                                </div>
+                            </div>
+                        </td>
+                    </ng-container>
+
+
                     <tr mat-header-row *matHeaderRowDef="displayedRoleColumns"></tr>
-                    <tr mat-row *matRowDef="let row; columns: displayedRoleColumns;"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedRoleColumns;" class="example-element-row"
+                        [class.example-expanded-row]="expandedElement === row" (click)="expandedElement = row">
+                    </tr>
+                    <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
                 </table>
                 <mat-paginator [pageSizeOptions]="[15]" showFirstLastButtons></mat-paginator>
             </div>
