--- a/PKonnect/PKonnect.UI/ClientApp/src/app/communities/role-defination/role-defination/role-defination.component.scss
+++ b/PKonnect/PKonnect.UI/ClientApp/src/app/communities/role-defination/role-defination/role-defination.component.scss
@@ -1,28 +1,42 @@
 $break-small: 510px;
-$color-black-normal: #202B34;
+$color-black-normal: #202b34;
 $color-black-hover: #000000;
-$color-white: #FFFFFF;
+$color-white: #ffffff;
 
-.mat-form-field{
-    width: 100%;
-    height: 44px;
-    background: $color-white;
-    border: 1px solid #B5B5B5;
-    color: $color-black-normal;
-    border-radius: 5px;
+.mat-form-field {
+  width: 100%;
+  height: 44px;
+  background: $color-white;
+  border: 1px solid #b5b5b5;
+  color: $color-black-normal;
+  border-radius: 5px;
 
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 20px;
-    margin: 5px 5px 15px 0px;
-    padding: 0px 5px 5px 5px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 20px;
+  margin: 5px 5px 15px 0px;
+  padding: 0px 5px 5px 5px;
 }
 
-::ng-deep .mat-form-field-label{
-    font-size: 14px !important;
+::ng-deep .mat-form-field-label {
+  font-size: 14px !important;
 }
 
 ::ng-deep .mat-form-field-underline {
-    display: none;
+  display: none;
 }
+
+tr.example-detail-row {
+  height: 0;
+}
+
+
+.example-element-row td {
+  border-bottom-width: 0;
+}
+
+.example-element-description {
+  padding: 15px 0px;
+}
+
